force-app/main/default/objects/SBQQ__SearchFilter__c/fields/SBQQ__FilterSourceField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__FilterSourceField__c</fullName>
    <description>Field that sources value for use in filtering.</description>
    <inlineHelpText>Field that sources value for use in filtering.</inlineHelpText>
    <label>Filter Source Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBQQ__FilterSourceObject__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Type</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>PMC_CPQ_SalesOrg__c</fullName>
                <label>Sales Org</label>
            </value>
            <value>
                <fullName>PMC_CPQ_PrimaryBusinessType__c</fullName>
                <label>Primary Business Type</label>
            </value>
            <value>
                <fullName>PMC_CPQ_PotashBusinessType__c</fullName>
            </value>
            <value>
                <fullName>PMC_CPQ_IndustrialBusinessType__c</fullName>
            </value>
            <value>
                <fullName>PMC_CPQ_SalesAreaCombination__c</fullName>
            </value>
            <value>
                <fullName>PMC_CPQ_ProductClassFilter__c</fullName>
            </value>
            <value>
                <fullName>PMC_CPQ_ProductFamilyFilter__c</fullName>
            </value>
            <value>
                <fullName>PMC_CPQ_ProductFamilyBlendFilter__c</fullName>
                <label>ProductFamilyBlendFilter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>