force-app/main/default/objects/SBQQ__SearchFilter__c/fields/SBQQ__HiddenSourceField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__HiddenSourceField__c</fullName>
    <description>Field that sources value for use in determining whether the filter is hidden.</description>
    <inlineHelpText>Specify the field that sources value for use in determining whether the filter is hidden.</inlineHelpText>
    <label>Hidden Source Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBQQ__HiddenSourceObject__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>PMC_CPQ_ISBR__c</fullName>
                <label>ISBR</label>
            </value>
            <value>
                <fullName>PMC_CPQ_BusinessTypeFeed__c</fullName>
                <label>Business Type Feed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>