force-app/main/default/objects/SBQQ__SearchFilter__c/fields/SBQQ__TargetField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TargetField__c</fullName>
    <description>Field searched by this filter.</description>
    <inlineHelpText>Specify the field to search.</inlineHelpText>
    <label>Target Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBQQ__TargetObject__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Product Code</fullName>
            </value>
            <value>
                <fullName>Product Description</fullName>
            </value>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>PMC_CPQ_Region__c</fullName>
                <label>Region</label>
            </value>
            <value>
                <fullName>PMC_CPQ_MaterialGroup__c</fullName>
                <label>MaterialGroup</label>
            </value>
            <value>
                <fullName>PMC_CPQ_ProductSubFamily__c</fullName>
                <label>Product Sub Family</label>
            </value>
            <value>
                <fullName>PMC_CPQ_Nitrogen__c</fullName>
                <label>Nitrogen%</label>
            </value>
            <value>
                <fullName>PMC_CPQ_Potassium__c</fullName>
                <label>Potassium%</label>
            </value>
            <value>
                <fullName>PMC_CPQ_Phosphorous__c</fullName>
                <label>Phosphorous%</label>
            </value>
            <value>
                <fullName>PMC_CPQ_LocationName__c</fullName>
                <label>Location</label>
            </value>
            <value>
                <fullName>PMC_CPQ_ProductShortDescription__c</fullName>
            </value>
            <value>
                <fullName>PMC_CPQ_ProductFamilyPicklist__c</fullName>
            </value>
            <value>
                <fullName>PMC_CPQ_ProductSalesOrg__c</fullName>
            </value>
            <value>
                <fullName>PMC_CPQ_ProductSegment__c</fullName>
                <label>Product Segment</label>
            </value>
            <value>
                <fullName>PMC_CPQ_ProductSalesArea__c</fullName>
            </value>
            <value>
                <fullName>PMC_CPQ_ProductTypes__c</fullName>
            </value>
            <value>
                <fullName>PMC_CPQ_ProductFamily__c</fullName>
            </value>
            <value>
                <fullName>StockKeepingUnit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>